# flour-screening

./: README.md  data_classification.ipynb  helpers.py  main.py  pyproject.toml  requirements.txt
data/: flour-dataset-cleaned.csv  flour_dataset.csv
